tests/cases/errors/001_unterminated_string.nesl
<<<<<<<<<nesl
{
  good = R"""pv(this is fine)pv"""
  bad = R"""pv(this string never ends
  another = R"""pv(unreachable)pv"""
}
=========nesl